@@ -1,135 +1,137 @@
 package com.example.orderapi.service;
 
-import com.example.orderapi.Client;
 import com.example.orderapi.dto.*;
 import com.example.orderapi.entity.Order;
-import com.example.orderapi.enums.Messages;
-import com.example.orderapi.exception.*;
 import com.example.orderapi.mapper.OrderMapper;
 import com.example.orderapi.repository.OrderRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
-import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
 import java.math.BigDecimal;
 import java.util.Date;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService {
 
-    @Autowired
-    OrderRepository orderRepository;
+    private final OrderRepository orderRepository;
 
-    @Autowired
-    OrderMapper orderMapper;
+    private final OrderMapper orderMapper;
+
+    private final WebClientService webClientService;
 
     @Value("${system_bank_number}")
     private String systemBankNumber;
-
-    Client client;
-
-    public OrderServiceImpl(WebClient.Builder webClientBuilder) {
-        this.client = new Client(webClientBuilder);
-    }
+    @Value("${system_bank_cvv}")
+    private String bankAccountCvv;
 
     @Override
-    public OrderDTO createOrder(String guestEmail, String couponCode, OrderRequestModel orderRequestModel) {
-        List<OrderRequestItem> orderRequestItems = orderRequestModel.getOrderRequestItems();
-
-        if (couponCode != null && !couponCode.isEmpty() && client.validateCouponCode(couponCode).getStatusCode() != HttpStatus.OK)
-            throw new InvalidCouponException(Messages.INVALID_COUPON.getMessage());
-
-        if (client.consumeProductStock(orderRequestItems).getBody().equals(false))
-            throw new StockNotAvailableException(Messages.STOCK_NOT_AVAILABLE.getMessage());
-
-        List<Long> productIds = orderRequestItems.stream().map(OrderRequestItem::getProductId).toList();
-        List<OrderResponseItem> orderItemsResponse = client.fetchProductInformation(productIds);
-        if (orderItemsResponse.isEmpty()) {
-            throw new ProductNotFoundException(Messages.PRODUCT_NOT_FOUND.getMessage());
-        }
-
-        orderItemsResponse.forEach(response -> {
-            orderRequestItems.stream()
-                    .filter(req -> req.getProductId().equals(response.getId()))
-                    .findFirst().ifPresent(request -> response.setQuantity(request.getQuantity()));
-        });
-
-        BigDecimal invoiceAmount = Mono.just(orderItemsResponse)
-                .map(orderItems -> orderItems.stream()
-                        .map(orderItem -> orderItem.getPrice().multiply(BigDecimal.valueOf(orderItem.getQuantity())))
-                        .reduce(BigDecimal.ZERO, BigDecimal::add))
-                .defaultIfEmpty(BigDecimal.ZERO)
-                .block();
-
-        OrderDTO orderDTO = new OrderDTO();
-        orderDTO.setAmount(invoiceAmount);
-        orderDTO.setCouponCode(couponCode);
-        orderDTO.setGuestEmail(guestEmail);
-        OrderDTO orderDTO1 = saveOrder(orderDTO);
-        orderDTO1.setCouponCode(couponCode);
-
-        if (couponCode != null && !couponCode.isEmpty()) {
-            ResponseEntity<ConsumedCouponDTO> consumedCouponDTOResponseEntity= client.consumeCoupon(orderDTO1);
-            if (consumedCouponDTOResponseEntity.getStatusCode() != HttpStatus.OK)
-                throw new UnableToConsumeCouponException(Messages.UNABLE_TO_CONSUME_COUPON.getMessage());
-
-            ConsumedCouponDTO consumedCouponDTO = consumedCouponDTOResponseEntity.getBody();
-            orderDTO1.setAmount(orderDTO1.getAmount().subtract(consumedCouponDTO.getActualDiscount()));
-            orderDTO1.setCouponID(consumedCouponDTO.getId());
-        }
-
-        List<OrderItemDTO> orderItemsDTO = orderItemsResponse.stream()
-                .map(response -> {
-                    OrderItemDTO orderItemDTO = new OrderItemDTO();
-                    orderItemDTO.setProductID(response.getId());
-                    orderItemDTO.setQuantity(response.getQuantity());
-                    orderItemDTO.setPrice(response.getPrice());
-                    return orderItemDTO;
-                })
-                .collect(Collectors.toList());
-        orderDTO1.setOrderItems(orderItemsDTO);
-        saveOrder(orderDTO1);
-
-        // transactions for invoice value withdraw and deposit
-        TransactionRequestModel withdrawTransactionModel = orderRequestModel.getTransactionRequestModel();
-        withdrawTransactionModel.setAmount(invoiceAmount);
-        ResponseEntity<Void> withdrawTransactionResponse = client.withdrawInvoiceAmountFromGuestBankAccount(withdrawTransactionModel);
-        if (withdrawTransactionResponse.getStatusCode() != HttpStatus.OK)
-            throw new FailedPaymentTransactionException(Messages.FAILED_WITHDRAW_PAYMENT_TRANSACTION.getMessage());
-
-        TransactionRequestModel depositTransactionModel = new TransactionRequestModel();
-        depositTransactionModel.setAmount(invoiceAmount);
-        depositTransactionModel.setCardNumber(systemBankNumber);
-        ResponseEntity<Void> depositTransactionResponse = client.depositInvoiceAmountIntoMerchantBankAccount(depositTransactionModel);
-        if (depositTransactionResponse.getStatusCode() != HttpStatus.OK)
-            throw new FailedPaymentTransactionException(Messages.FAILED_DEPOSIT_PAYMENT_TRANSACTION.getMessage());
-
-//         send order notifications
-//        client.sendOrderDetailsToNotificationsAPI(orderDTO);
-        return orderDTO1;
+    public OrderDTO createOrder(OrderRequestModel orderRequestModel) {
+        checkIfCouponIsValidIfExists(orderRequestModel.getCouponCode(), orderRequestModel.getGuestEmail());
+        webClientService.checkIfProductsOutOfStock(orderRequestModel.getOrderRequestItems());
+        List<ProductResponse> productResponses = webClientService.getProducts(orderRequestModel.getProductIds());
+        BigDecimal invoiceAmount = calculateInvoiceAmount(orderRequestModel.getOrderRequestItems(), productResponses);
+        BigDecimal invoiceAmountAfterDiscount = addDiscountIfCouponExists(invoiceAmount, orderRequestModel.getCouponCode(), orderRequestModel.getGuestEmail());
+        applyPaymentTransactions(orderRequestModel.getTransactionRequestModel(), invoiceAmountAfterDiscount);
+        webClientService.consumeStock(orderRequestModel.getOrderRequestItems());
+        OrderDTO orderDTO = createOrder(orderRequestModel, productResponses, invoiceAmountAfterDiscount);
+        consumeCouponIfCouponExists(
+                orderRequestModel.getCouponCode()
+                , orderRequestModel.getGuestEmail()
+                , invoiceAmount, orderDTO.getId());
+        webClientService.sendOrderDetailsToNotificationsAPI(orderDTO);
+        return orderDTO;
     }
 
     @Override
     public List<OrderDTO> findOrdersByGuestEmail(String guestEmail) {
-        List<Order> orders = orderRepository.findOrdersByGuestEmail(guestEmail).orElseGet(null);
-        return orders.stream().map(order -> orderMapper.toDTO(order)).collect(Collectors.toList());
-    }
-
-    @Override
-    public OrderDTO saveOrder(OrderDTO orderDTO) {
-        Order savedOrder = orderRepository.save(orderMapper.toEntity(orderDTO));
-        return orderMapper.toDTO(savedOrder);
+        List<Order> orders = orderRepository.findOrdersByGuestEmail(guestEmail);
+        return orders.stream().map(orderMapper::toDTO).toList();
     }
 
     @Override
     public List<OrderDTO> findOrdersByCreatedAtBetween(Date from, Date to) {
-        List<Order> orders = orderRepository.findOrdersByCreatedAtBetween(from, to).orElseGet(null);
-        return orders.stream().map(order -> orderMapper.toDTO(order)).collect(Collectors.toList());
+        List<Order> orders = orderRepository.findOrdersByCreatedAtBetween(from, to);
+        return orders.stream().map(orderMapper::toDTO).toList();
+    }
+
+    private void checkIfCouponIsValidIfExists(String couponCode, String customerEmail) {
+        if (couponCode != null)
+            webClientService.validateCoupon(couponCode, customerEmail);
+    }
+
+    private BigDecimal calculateInvoiceAmount(List<ItemRequest> itemRequests, List<ProductResponse> productResponses) {
+        Map<Long, BigDecimal> productPriceMap = productResponses.stream()
+                .collect(Collectors.toMap(ProductResponse::getId, ProductResponse::getPrice));
+        return itemRequests.stream()
+                .map(orderRequestItem -> {
+                    BigDecimal price = productPriceMap.get(orderRequestItem.getProductId());
+                    return price.multiply(BigDecimal.valueOf(orderRequestItem.getQuantity()));
+                }).reduce(BigDecimal.ZERO, BigDecimal::add);
+    }
+
+    private BigDecimal addDiscountIfCouponExists(BigDecimal invoiceAmount, String couponCode, String customerEmail) {
+        if (couponCode != null)
+            return invoiceAmount.subtract(webClientService.calculateDiscount(couponCode, customerEmail, invoiceAmount));
+        return invoiceAmount;
+    }
+
+    private void applyPaymentTransactions(TransactionRequestModel withdrawRequestModel, BigDecimal invoiceAmount) {
+        if(invoiceAmount.compareTo(BigDecimal.ZERO) == 0)
+            return;
+        withdrawRequestModel.setAmount(invoiceAmount);
+        webClientService.withdrawInvoiceAmountFromGuestBankAccount(withdrawRequestModel);
+        TransactionRequestModel depositRequestModel = TransactionRequestModel.builder()
+                .cardNumber(systemBankNumber)
+                .cvv(bankAccountCvv)
+                .build();
+        depositRequestModel.setAmount(invoiceAmount);
+        webClientService.depositInvoiceAmountIntoMerchantBankAccount(depositRequestModel);
+    }
+
+    private List<OrderItemDTO> createOrderItems(List<ItemRequest> itemRequests, List<ProductResponse> productResponses, Long orderId) {
+        Map<Long, BigDecimal> productPriceMap = productResponses.stream()
+                .collect(Collectors.toMap(ProductResponse::getId, ProductResponse::getPrice));
+        return itemRequests.stream()
+                .map(orderRequestItem -> {
+                    OrderItemDTO orderItemDTO = new OrderItemDTO();
+                    orderItemDTO.setOrderId(orderId);
+                    orderItemDTO.setProductId(orderRequestItem.getProductId());
+                    orderItemDTO.setQuantity(orderRequestItem.getQuantity());
+                    orderItemDTO.setPrice(productPriceMap.get(orderRequestItem.getProductId()));
+                    return orderItemDTO;
+                }).toList();
+    }
+
+    private OrderDTO createOrder(OrderRequestModel orderRequestModel, List<ProductResponse> productResponses, BigDecimal invoiceAmount) {
+        OrderDTO orderDTO = OrderDTO.builder()
+                .guestEmail(orderRequestModel.getGuestEmail())
+                .couponCode(orderRequestModel.getCouponCode())
+                .amount(invoiceAmount)
+                .build();
+        orderDTO = saveOrder(orderDTO);
+        orderDTO.setOrderItems(
+                createOrderItems(orderRequestModel.getOrderRequestItems(), productResponses, orderDTO.getId())
+        );
+        return saveOrder(orderDTO);
+    }
+
+    private OrderDTO saveOrder(OrderDTO orderDTO) {
+        return orderMapper.toDTO(orderRepository.save(orderMapper.toEntity(orderDTO)));
+    }
+
+    private void consumeCouponIfCouponExists(String couponCode, String customerEmail, BigDecimal invoiceAmount, Long orderId) {
+        if (couponCode != null) {
+            webClientService.consumeCoupon(CouponRequestDTO.builder()
+                    .code(couponCode)
+                    .customerEmail(customerEmail)
+                    .orderPrice(invoiceAmount)
+                    .orderId(orderId)
+                    .build());
+        }
     }
 }
